testdata/baselines/reference/compiler/circularDestructuring.errors.txt
circularDestructuring(1,7): error TS1003: Identifier expected.
circularDestructuring(1,9): error TS1005: ',' expected.
circularDestructuring(1,14): error TS1128: Declaration or statement expected.
circularDestructuring(1,14): error TS1005: ',' expected.
circularDestructuring(1,14): error TS1128: Declaration or statement expected.

==== circularDestructuring (5 errors) ====
    const { c, f }: string | number = { c: 0, f };
          ~
!!! error TS1003: Identifier expected.
            ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1128: Declaration or statement expected.
    
